# tinker

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_PRODUCTION_READINESS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  SETUP.md  agents.py  conftest.py  docker-compose.yml  exceptions.py  main.py  metrics.py  pyproject.toml  pytest.ini  tinker_active_preset.json  tinker_models.json  tinker_presets.json
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: __init__.py  _shared.py  agent_factory.py  architect.py  critic.py  human_judge.py  protocols.py  research_team.py  synthesizer.py
agents/fritz/: README.md  __init__.py  __main__.py  agent.py  config.py  credentials.py  git_ops.py  gitea_ops.py  github_ops.py  identity.py  metrics.py  platform.py  protocol.py  push_policy.py  retry.py
agents/grub/: README.md  __init__.py  __main__.py  agent.py  config.py  context_summarizer.py  feedback.py  loop.py  registry.py
agents/tests/: test_agent_factory.py
architecture/: __init__.py  manager.py  merger.py  p8_architecture_state_manager.md  run_test.py  schema.py
backup/: __init__.py  __main__.py  backup_manager.py
backup/tests/: test_backup_manager.py
bootstrap/: __init__.py  components.py  enterprise_stack.py  health.py  logging_config.py
capacity/: planner.py
capacity/tests/: __init__.py  test_capacity_planner.py
config/: __init__.py  settings.py  validation.py
context/: __init__.py  assembler.py  memory_adapter.py  prompt_builder_adapter.py  stubs.py  test_context_assembler.py
core/: protocols.py
core/context/: __init__.py  assembler.py  memory_adapter.py  prompt_builder_adapter.py  stubs.py  test_context_assembler.py
core/events/: __init__.py  bus.py  types.py
core/llm/: __init__.py  client.py  client_factory.py  context.py  parsing.py  providers.py  router.py  tests.py  types.py
core/mcp/: __init__.py  bridge.py  client.py  config.py  server.py
core/memory/: __init__.py  _research_archive.py  (+12 more)
dashboard/: __init__.py  __main__.py  active_task.py  app.py  architect_critic.py  health_arch.py  log_stream.py  loop_status.py  panels.py  state.py  subscriber.py  task_queue.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTRUCTIONS.md  Overview.md  SETUP.md  TINKER.md  USER_GUIDE.md  llm-homelab-setup.md
e2e/: conftest.py  test_smoke.py
experiments/: __init__.py  ab_testing.py  offline_eval.py
features/: flags.py
fritz/: __init__.py  agent.py  credentials.py  git_ops.py  gitea_ops.py  github_ops.py  metrics.py  platform.py  push_policy.py
gradio_ui/: __init__.py  __main__.py  app.py
grub/: __init__.py  __main__.py  agent.py  config.py  context_summarizer.py  feedback.py  loop.py  registry.py
health/: __init__.py  http_server.py
k8s/: configmap.yaml  namespace.yaml  pvc.yaml
lineage/: __init__.py  tracker.py
llm/: __init__.py  client.py  context.py  p1_model_client_n_ollama.md  parsing.py  requirements.txt  router.py  tests.py  types.py
mcp/: README.md  __init__.py  bridge.py  client.py  config.py  server.py
memory/: README.md  __init__.py  compression.py  embeddings.py  manager.py  requirements.txt  schemas.py  storage.py  test_memory_manager.py
models/: __init__.py  ollama_sync.py
observability/: __init__.py  alerting.py  audit_log.py  otlp.py  sla_tracker.py  structured_logging.py  tracing.py
orchestrator/: __init__.py  checkpoint.py  compat.py  config.py  macro_loop.py  meso_loop.py  micro_loop.py  orchestrator.py  p7_orchestrator.md  state.py  stubs.py  test_orchestrator_integration.py
p10_observability_dashboard/: __init__.py  active_task.py  architect_critic.py  detail_view.py  health_arch.py  log_handler.py  loop_status.py  mock_orchestrator.py  orchestrator_integration.py  pyproject.toml  subscriber.py  task_queue.py
p1_model_client_n_ollama/: __init__.py  client.py  context.py  parsing.py  requirements.txt  router.py  tests.py  types.py
p2_memory_manager/: __init__.py  manager.py  p2_memory_manager.md  requirements.txt  schemas.py
p3_tool_layer/: __init__.py  docker-compose.searxng.yml  p3_tool_layer.md  registry.py  requirements.txt  settings.yml  test_tool_layer.py
p4_agent_prompts/: __init__.py  builder.py  examples.py  templates.py  test_prompts.py  validator.py
p5_task_engine/: __init__.py  engine.py  p5_task_engine.md  queue.py  registry.py  resolver.py  schema.py  scorer.py
p6_context_assembler/: __init__.py  context_assembler.py  p6_context_assembler.md  stubs.py  test_context_assembler.py
p7_orchestrator/: __init__.py  config.py  macro_loop.py  micro_loop.py  orchestrator.py  state.py  stubs.py  test_orchestrator_integration.py
p8_architecture_state_manager/: __init__.py  merger.py  run_test.py  schema.py
p9_anti_stagnation_manager/: __init__.py  detectors.py  monitor.py  test_anti_stagnation.py
prompts/: __init__.py  builder.py  examples.py  p4_agent_prompts.md  schemas.py  test_prompts.py  validator.py  variants.py
requirements/: README.md  base.in  base.txt  dev.in  dev.txt  metrics.in  metrics.txt
resilience/: __init__.py  auto_recovery.py  backpressure.py  circuit_breaker.py  dead_letter_queue.py  distributed_lock.py  idempotency.py  null_objects.py  rate_limiter.py  retry.py
security/: __init__.py  encryption.py  secrets.py
services/: __init__.py  protocol.py  registry.py
stagnation/: config.py  detectors.py  embeddings.py  event_log.py  models.py  monitor.py  test_anti_stagnation.py
streamlit_ui/: __init__.py  __main__.py  app.py
tasks/: __init__.py  abstract_registry.py  engine.py  generator.py  postgres_registry.py  queue.py  registry.py  registry_factory.py  resolver.py  schema.py  scorer.py
tests/: test_agents.py  test_exceptions.py  test_new_features.py  test_research_crawler.py  test_research_mode.py
tools/: __init__.py  artifact_writer.py  base.py  diagram_generator.py  memory_query.py  registry.py  requirements.txt  test_tool_layer.py  web_scraper.py  web_search.py
ui/: __init__.py  core.py
utils/: __init__.py  io.py  retry.py
validation/: __init__.py  input_validator.py
webui/: __init__.py  __main__.py  app.py  core.py
(+345 files in other folders)
