[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "tinker"
version         = "0.1.0"
description     = "Tinker — Autonomous Architecture Thinking Engine"
readme          = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── LLM / Model Client ───────────────────────────────────────────
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",

    # ── Memory backends ──────────────────────────────────────────────
    "redis>=5.0.0",
    "duckdb>=0.10.0",
    "chromadb>=0.5.0",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.0.0",

    # ── Tools (web search / scraping / diagrams) ─────────────────────
    "trafilatura>=1.12.0",
    "playwright>=1.44.0",
    "anyio>=4.4.0",
    "graphviz>=0.20.3",

    # ── Architecture State ────────────────────────────────────────────
    "pydantic>=2.0.0",

    # ── Dashboard ────────────────────────────────────────────────────
    "textual>=0.52.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",

    # ── Root ─────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Install with: pip install -e ".[metrics]"
# Enables Prometheus metrics on http://localhost:9090/metrics
metrics = [
    "prometheus-client>=0.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis[aioredis]>=2.23.0",
    "textual-dev>=0.52.0",
    "prometheus-client>=0.20.0",
]

[project.scripts]
tinker      = "main:main"
tinker-dash = "dashboard.__main__:main"

[project.optional-dependencies.enterprise]
# Install with: pip install -e ".[enterprise]"
# Enables all enterprise features: resilience, observability, health, security
# Most of these are already in the base dependencies; this group makes the
# intent explicit and adds any extras not in the core install.
enterprise = [
    "aiosqlite>=0.20.0",   # dead letter queue, audit log, lineage tracker
    "aiohttp>=3.9.0",      # alert webhooks (Slack, custom)
    "httpx>=0.27.0",       # backup manager HTTP operations
]

[tool.setuptools.packages.find]
where   = ["."]
include = [
    "llm*",
    "memory*",
    "tools*",
    "prompts*",
    "tasks*",
    "context*",
    "orchestrator*",
    "architecture*",
    "stagnation*",
    "dashboard*",
    # ── Enterprise packages (all four phases) ─────────────────────────────
    "resilience*",       # circuit breakers, distributed lock, DLQ, rate limiting
    "backup*",           # snapshot backup/restore
    "validation*",       # input sanitisation and prompt injection detection
    "observability*",    # structured logging, tracing, alerting, SLA, audit log
    "health*",           # HTTP health endpoint server
    "security*",         # secret manager (env/Vault/AWS)
    "features*",         # feature flags
    "lineage*",          # data lineage tracker
    "experiments*",      # A/B testing framework
    "capacity*",         # capacity planning and resource monitoring
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = [
    "llm",
    "memory",
    "tools",
    "tasks",
    "context",
    "orchestrator",
    "architecture",
    "stagnation",
    "dashboard",
    # ── Enterprise test paths ──────────────────────────────────────────────
    "resilience",
    "backup",
    "validation",
    "observability",
    "health",
    "security",
    "features",
    "lineage",
    "experiments",
    "capacity",
]
