[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "tinker"
version         = "0.1.0"
description     = "Tinker — Autonomous Architecture Thinking Engine"
readme          = "README.md"
requires-python = ">=3.11"

# ---------------------------------------------------------------------------
# Dependency version strategy — two-layer pinning
# ---------------------------------------------------------------------------
# This file declares MINIMUM acceptable versions (>=) so that `pip install`
# resolves a compatible set for the developer's environment.
#
# For reproducible production / CI installs, use the lock files instead:
#
#   pip install -r requirements/base.txt    # production (exact pins)
#   pip install -r requirements/dev.txt     # development (exact pins + tools)
#
# To regenerate the lock files after editing any *.in source:
#
#   make deps          # regenerates requirements/base.txt
#   make deps-dev      # regenerates requirements/dev.txt
#
# Lock files are committed to version control. Reviewers should scrutinise
# lock-file diffs as carefully as source-code diffs.
# ---------------------------------------------------------------------------

dependencies = [
    # ── LLM / Model Client ───────────────────────────────────────────────────
    "aiohttp>=3.9.0",           # async HTTP; used by OllamaClient
    "httpx>=0.27.0",            # sync + async HTTP; used by backup/tool layers

    # ── Memory backends ──────────────────────────────────────────────────────
    "redis>=5.0.0",             # short-term working memory (async via redis.asyncio)
    "duckdb>=0.10.0",           # session memory (in-process OLAP)
    "chromadb>=0.5.0",          # semantic research archive (vector DB)
    "aiosqlite>=0.20.0",        # task registry, dead-letter queue, audit log
    "sentence-transformers>=3.0.0",  # local embeddings (MiniLM / nomic-embed)

    # ── Tools (web search / scraping / diagrams) ─────────────────────────────
    "trafilatura>=1.12.0",      # web content extraction
    "playwright>=1.44.0",       # browser automation (run: playwright install chromium)
    "anyio>=4.4.0",             # async compatibility shim
    "graphviz>=0.20.3",         # .dot diagram rendering

    # ── Architecture State ────────────────────────────────────────────────────
    "pydantic>=2.0.0",          # data models and validation

    # ── Dashboard / TUI ───────────────────────────────────────────────────────
    "textual>=0.52.0",          # terminal UI framework
    "rich>=13.7.0",             # rich terminal output (pulled in by Textual)
    "loguru>=0.7.0",            # structured logging

    # ── Configuration ─────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",     # .env file loader
]

[project.optional-dependencies]
# Install with: pip install -e ".[metrics]"
# Exposes a Prometheus /metrics endpoint on http://localhost:9090/metrics
metrics = [
    "prometheus-client>=0.20.0",
]

# Install with: pip install -e ".[dev]"
# Adds all test runners, mocking libraries, and developer tooling.
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",             # coverage reports (pytest --cov)
    "fakeredis[aioredis]>=2.23.0",  # in-process Redis mock for tests
    "textual-dev>=0.52.0",           # Textual live-reload devtools
    "prometheus-client>=0.20.0",
    "pip-tools>=7.0.0",              # pip-compile for lock-file regeneration
    "pip-audit>=2.7.0",             # CVE scan of lock files (make audit)
]

# Install with: pip install -e ".[enterprise]"
# Enables all enterprise features: resilience, observability, health, security.
# Most runtime deps are already in the base list; this group makes the intent
# explicit and is used as a documentation / CI signal.
enterprise = [
    "aiosqlite>=0.20.0",   # dead letter queue, audit log, lineage tracker
    "aiohttp>=3.9.0",      # alert webhooks (Slack, PagerDuty, custom)
    "httpx>=0.27.0",       # backup manager HTTP operations
]

[project.scripts]
tinker      = "main:main"
tinker-dash = "ui.dashboard.__main__:main"

[tool.setuptools.packages.find]
where   = ["."]
include = [
    # ── Core AI/LLM layer ─────────────────────────────────────────────────
    "core*",
    # ── Runtime (orchestration, tasks, stagnation) ────────────────────────
    "runtime*",
    # ── Platform features ─────────────────────────────────────────────────
    "tinker_platform*",
    # ── Infrastructure (resilience, security, health, observability, etc.) ─
    "infra*",
    # ── Agents (fritz, grub) ──────────────────────────────────────────────
    "agents*",
    # ── UI (dashboard, gradio, streamlit, web) ────────────────────────────
    "ui*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = [
    "tests",
    "core",
    "runtime",
    "tinker_platform",
    "infra",
    "agents",
    "ui",
    "services",
]
addopts = "--tb=short --strict-markers"
markers = [
    "asyncio: async test (handled by pytest-asyncio)",
    "unit: fast unit tests with no external dependencies",
    "integration: tests that require Docker Compose services (redis, ollama)",
    "e2e: end-to-end tests using stub orchestrator",
    "slow: tests that take more than 5 seconds",
]

# ---------------------------------------------------------------------------
# Coverage — run with: pytest --cov
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch   = true
source   = [
    "core",
    "runtime",
    "infra",
    "agents",
    "tinker_platform",
    "ui",
    "services",
    "bootstrap",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "main.py",          # entry point — covered by integration tests
]

[tool.coverage.report]
show_missing    = true
skip_covered    = false
fail_under      = 60    # minimum acceptable coverage percentage
exclude_lines   = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",         # abstract method stubs
]

[tool.coverage.html]
directory = "htmlcov"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator — readability preference
    "RUF001", # ambiguous unicode char in string — intentional (curly quotes, etc.)
    "RUF002", # ambiguous unicode char in docstring — intentional (en-dash, etc.)
    "RUF003", # ambiguous unicode char in comment — intentional
    "RUF012", # mutable class variable without ClassVar — too noisy for dataclass-style code
    "SIM105", # contextlib.suppress — try/except/pass is clearer in many cases
    "RUF006", # dangling asyncio.Task — false positives on fire-and-forget patterns
]

[tool.ruff.lint.per-file-ignores]
# Mixin imports must come after base-class definitions
"core/memory/manager.py" = ["E402"]
"infra/architecture/manager.py" = ["E402"]
# UI apps import after app-object creation (FastAPI / Gradio / Streamlit pattern)
"ui/gradio/app.py" = ["E402"]
"ui/streamlit/app.py" = ["E402"]
"ui/web/app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "agents",
    "bootstrap",
    "core",
    "infra",
    "orchestrator",
    "ui",
]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true
warn_unused_configs    = true
warn_redundant_casts   = true
warn_unused_ignores    = true
